--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
     "mongoose": "^5.5.11",
+    "node-rsa": "^1.0.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.3",
